test/syc/bad/charlitmulti.c
/*
 * Multiple characters in character constant
 */

int m = 'aa';
